<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_main"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:id="@+id/layGameLogos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
    	android:orientation="vertical">

        <ImageView
            android:id="@+id/imgGameLogo"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/wbclimate_logo" />
        
    </LinearLayout>
        
    <TextView 
        android:id="@+id/lblSelectCountry"
        android:layout_marginTop="20dp"
        android:text="@string/select_country"
       	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
      	android:gravity="center_horizontal"
       	android:textStyle="bold"
       	android:textColor="#999999"/>
    
    
    <LinearLayout
        android:id="@+id/laySearch"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="fill_parent"
        android:layout_height="37dp"
        android:padding="1dp"
    	android:background="@color/dark_gray"
        android:gravity="center_vertical|center_horizontal">
    	
         <LinearLayout
        	android:id="@+id/laySearchBorder"
        	android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
    		android:background="@color/search_button"
        	android:gravity="center_vertical|center_horizontal">
        
        	<TextView 
	            android:id="@+id/txtSelectedCountry"
            	android:text="@string/sample_value"
            	android:drawableRight="@drawable/search_icon"
        		android:layout_width="fill_parent"
        		android:layout_height="wrap_content"
        		android:gravity="center_horizontal"
        		android:layout_marginLeft="5dp"
        		android:layout_marginRight="5dp"
        		android:drawablePadding="5dp"
        		android:textStyle="bold"
    			android:background="@color/search_button"
        		android:textColor="#555555"/>
        
    	</LinearLayout>
         
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layGameStartButton"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="120dp"
        android:layout_height="40dp"
    	android:background="@color/start_button"
    	android:padding="7dp"
        android:gravity="center_vertical|center_horizontal">
        
        <TextView 
            android:id="@+id/lblStartButton"
            android:text="@string/lbl_start_button"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center_horizontal"
        	android:textStyle="bold"
        	android:textSize="15sp"
        	android:textColor="#000000"/>        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layOtherOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:padding="13dp"
    	android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal">
        
        <TextView 
            android:id="@+id/lblTutorial"
            android:text="@string/lbl_tutorial"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center_horizontal"
        	android:textStyle="bold"
        	android:textSize="13sp"
        	android:textColor="#666666"/>  
        
        <TextView 
            android:id="@+id/lblCredits"
            android:text="@string/lbl_credits"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:gravity="center_horizontal"
        	android:layout_marginLeft="20dp"
        	android:textStyle="bold"
        	android:textSize="13sp"
        	android:textColor="#666666"/>  
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/layLogos"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:gravity="bottom|center_horizontal"
    	android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgWorldBankLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/worldbank_logo" />

        <ImageView
            android:id="@+id/imgAmsgamesLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:layout_marginLeft="20dp"
            android:src="@drawable/amsgames_logo" />
        
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        android:textColor="#999999"
        android:textSize="10sp"
        android:textStyle="bold"
        android:text="@string/copyright" />

</LinearLayout>